// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdownFilterOptionComponent #render() should render disabled and checked filter option 1`] = `
<div
  className="ui-dropdown-filter__option ui-dropdown-filter__option_is-disabled"
>
  <Checkbox
    checked={true}
    disabled={true}
    name="3"
    onChange={[Function]}
  >
    Three
  </Checkbox>
</div>
`;

exports[`dropdownFilterOptionComponent #render() should render filter option 1`] = `
<div
  className="ui-dropdown-filter__option"
>
  <Checkbox
    checked={false}
    disabled={false}
    name="3"
    onChange={[Function]}
  >
    Three
  </Checkbox>
</div>
`;
